# pyFoam2

./: .gitignore  .project  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pyFoam2/: __init__.py  __main__.py  cli.py  error.py  foam_information.py
src/pyFoam2/basics/: __init__.py  data_structures.py  foam_file_generator.py  line_reader.py  ply_parser.py  terminal_formatter.py  utilities.py
src/pyFoam2/infrastructure/: authentication.py  configuration.py  hardcoded.py  logging.py
src/pyFoam2/run_dictionary/: __init__.py  file_basis.py  parsed_parameter_file.py
tests/: test_version.py
