[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyFoam2"
description = "A fresh package scaffold named pyFoam2."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
  {name = "Jan Kaufmann", email = "jankaufmann@gmx.net"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dynamic = ["version"]
dependencies = [
  "six>=1.16",
  "ply>=3.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "pyFoam2.__version__"}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[project.scripts]
pyFoam2 = "pyFoam2.cli:main"

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
